<resources>
    <string name="app_name">Medhaj News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="article_main_image">Article Main Image</string>
    <string name="download_toast">This story will be shortly available in the downloaded section</string>
    <string name="sample_author">by Anubhav</string>
    <string name="sample_title">Why relying on your memories could compromise your security</string>
    <string name="sample_date">Jun 2, 2016</string>
    <string name="sample_update_time">TODAY at 9:00 pm</string>
    <string name="sample_area">DELHI</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="article_delete">Article removed from downloaded section</string>
    <string name="sample_category">Security</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="section_format">%1$d : Hyper Text Markup Language Code</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Medhaj News</string>
    <string name="sample_image_link">https://medhaj-staging.s3.amazonaws.com/uploads/photo/data_file/45086/SUSHMA_SWARAJ_WITH_V_K_SINGH_AND_S_JAISHANKAR.jpg</string>
    <string name="sample_article_link">http://medhajnews.in/science_technology/news.php/pepsi-cola-like-oxygenated-drink-will-help-cure-cancer--34990--en</string>
    <string name="title_activity_news_cards">NewsCardsActivity</string>
    <string name="title_activity_news">Medhaj News</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_share_your_story">Share Story</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="request_permission">MedhajNews app requires access to the Camera</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="share_intro">With everything that\'s happening in todays world we often feel like getting our voice heard. But we struggle to find the right platform to do so.\n\nIn this section, you can finally what you think. what you believe in</string>
    <string name="get_started">Get Started</string>
    <string name="stories">Stories</string>
    <string name="share">Share</string>
    <string name="save">Save Offline</string>
    <string name="color">Invert Colors</string>
    <string name="upload_a_photo_video">Upload a photo/video</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_login">Log In or Create Account</string>
    <string name="language">Language</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_subject">Android App Feedback</string>
    <string name="feedback_email">support@medhajnews.com</string>
    <string name="action_rate">Rate app on PlayStore</string>
    <string name="acc_font_size">Slide to adjust font size</string>
    <string name="cancel">Cancel</string>
    <string name="long_press_save">Save</string>
    <string name="long_press_share">Share</string>
    <string name="copyright">Looking for something, Try Searching \n\n © 2016 MedhajNews and Media Limited or its affiliated companies. All rights reserved</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_loading">Loading</string>
    <string name="comments">Comments</string>
    <string name="action_like">Like</string>
    <string name="action_dislike">Dislike</string>
    <string name="action_comment">Comment</string>
    <plurals name="like_message">
        <item quantity="one">%d Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
</resources>
