<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.NewsActivity">
    <item android:id="@+id/action_settings"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_feedback"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/action_feedback"/>
    <item android:id="@+id/action_login"
        android:orderInCategory="97"
        app:showAsAction="never"
        android:title="@string/action_login" />
    <item android:id="@+id/action_rate"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:title="@string/action_rate" />
    <item android:id="@+id/action_notify"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="Sample Notification" />
</menu>
